# mini_kv_db

./: .gitignore  CMakeLists.txt  README.md
include/: database.hpp  record.hpp
src/: database.cpp  main.cpp  record.cpp
